# SaarthiAI

SaarthiVoice/: .gitignore  .replit  README.md  main.py  pyproject.toml  replit.md  requirements.txt
SaarthiVoice/attached_assets/: Pasted--Build-a-project-called-SaarthiAI-Multilingual-Community-Voice-Assistant-Use-Python-FastAPI-back-1763898310562_1763898310563.txt
SaarthiVoice/models/: logic.py  logic_backup.py
SaarthiVoice/static/: app.js  style.css
SaarthiVoice/templates/: index.html
SaarthiVoice/utils/: audio_helper.py
