[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi>=0.121.3",
    "gtts>=2.5.4",
    "pydub>=0.25.1",
    "python-multipart>=0.0.20",
    "speechrecognition>=3.14.4",
    "uvicorn>=0.38.0",
]
